# USPTO_balance

./: B_enrichment_workflow.ipynb  C_part1_framework.py  D_part2_framework.py  E_part3_framework.py  README.md  Round_Trip_Accuracy.py  balancing_workflow.py  pyproject.toml
Documents/GitHub/USPTO_balance/: B_enrichment_workflow.ipynb  C_part1_framework.py  D_part2_framework.py  E_part3_framework.py  balancing_workflow.py
notebooks/: B_enrichment_workflow.ipynb  plotting.ipynb
reaction_equilibration/template_extraction/: README.md  pyproject.toml
reaction_equilibration/template_extraction/notebooks/: dev_temp_extraction.ipynb
reaction_equilibration/template_extraction/src/template_extraction/: __init__.py  pipeline.py  reaction_formatter.py  template_extractor.py  utilities.py
reaction_equilibration/template_extraction/tests/: uspto_Thakkar_sample_1000_mapped_smiles.csv
reaction_equilibration/uspto_balance/: .gitignore  LICENSE.md  README.md  config_build_dataset.py  config_create_src_tgt_files.py  config_equilibrate.py  config_stats_analysis.py  pyproject.toml
reaction_equilibration/uspto_balance/notebooks/: plotting.ipynb
reaction_equilibration/uspto_balance/scripts/: run_build_dataset.py  run_create_src_tgt_files.py  run_equilibrate.py  run_stats_analysis.py
reaction_equilibration/uspto_balance/src/uspto_balance/: C_part1_framework.py  D_part2_framework.py  balancing_workflow.py  build_dataset.py  create_src_tgt_files.py  data_handler.py  dataset_class.py  dataset_equilibration.py  equilibrate.py  find_matches_and_format.py  retrosynthesis_utilities.py  validate_reactions_TTL.py
reaction_equilibration/uspto_balance/src/uspto_balance/utils/: helper_functions.py
src/uspto_balance/: C_part1_framework.py  C_part1_framework_BACKUP_218467.py  C_part1_framework_LOCAL_217694.py  C_part1_framework_REMOTE_218467.py  D_part2_framework.py  E_part3_framework.py  __init__.py  balancing_workflow.py  dataset_equilibration.py  dataset_equilibration_BACKUP_219064.py  dataset_equilibration_LOCAL_219064.py  execute_onmt.py  find_index.py
